# sqsh.js

./: .gitmodules  Makefile  README.md  emscripten.cross  index.html.in  meson.build  meson_options.txt  package.json.in  webpack.config.js.in
include/: sqshjs_config.h
lib/: .tsconfig.json  archive.mts  archive.ts  base.mts  config.c  error.c  error.mts  index.d.ts  lib.mts  lib.ts  libsqshjs.d.ts  mapper.c  meson.build  tsconfig.json.in  types.mts
lib/libsqsh.js/: index.d.ts
test/: index.html
